fix column-gap support

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -21,8 +21,11 @@
 .headerSection {
   display: flex;
   justify-content: space-between;
-  column-gap: 10px;
   align-items: center;
+}
+
+.headerSection > *:not(:last-child) {
+  margin-right: 10px;
 }
 
 .headerSection.mainSection {
